cc : Reland move screen space scale factor to root transform node

This is relanding the CL :
https://codereview.chromium.org/2408243002
If DT is the device transform, DSF is matrix scaled by device scale
factor and page scale factor for root, RT is matrix translated by root's
position, the screen space transform of root layer should be DT*DSF*RT,
https://codereview.chromium.org/2408243002 changed this to DSF*DT*RT and
that caused https://crbug.com/660047. This CL fixes it.

BUG=644582
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2473453002
Cr-Commit-Position: refs/heads/master@{#429425}

Former-commit-id: b874eddcc31db95ab073c278a880cab0d59e655c