third_party/WebKit/Source/platform/graphics/compositing/PaintArtifactCompositor.cpp
@@ -453,8 +453,17 @@ class PropertyTreeManager {
 };
 
 void PropertyTreeManager::setDeviceScaleFactor(float deviceScaleFactor) {
-  auto& rootTransformNode = *transformTree().Node(kSecondaryRootNodeId);
-  rootTransformNode.local.Scale(deviceScaleFactor, deviceScaleFactor);
+  // TODO(jaydasika): We shouldn't set ToScreeen and FromScreen of root
+  // transform node here. They should be set while updating transform tree in
+  // cc.
+  gfx::Transform toScreen;
+  toScreen.Scale(deviceScaleFactor, deviceScaleFactor);
+  transformTree().SetToScreen(kRealRootNodeId, toScreen);
+  gfx::Transform fromScreen;
+  bool invertible = toScreen.GetInverse(&fromScreen);
+  DCHECK(invertible);
+  transformTree().SetFromScreen(kRealRootNodeId, fromScreen);
+  transformTree().set_needs_update(true);
 }
 
 int PropertyTreeManager::compositorIdForTransformNode(
